style.css
/* Global elements */

body {
  background: #EFEFEF url(images/soft-wallpaper.png) 0 0 repeat;
  font-family: 'Open Sans', sans-serif;
}

.wrapper {
  background-color: #2B2B2B;
  width: 100vw;
}

hr {
  width: 45%;
}

/* Header */

.header-wrap {
  background: rgb(28, 28, 28) url(images/soft-wallpaper.png) 0 0 repeat;
}

.page-header {
  background-color: transparent;
  display: flex;
  flex-flow: column;
  height: auto;
  width: 100vw;
  transition: all 0.15s linear;
}

/*  Username */

.username {
  align-items: center;
  cursor: pointer;
  display: flex;
  justify-content: center;
  margin: 1em 1em 0 0;
  order: 0;
  width: 100%;
}

.username button {
  background-color: transparent;
  border: 0.0937em solid #EFEFEF;
  box-sizing: content-box;
  border-radius: 50%;
  padding: 0.3em;
  height: 1em;
  width: 1em;
}

.username p {
  color: #55B4F8;
  margin: 0 0.4em;
  text-align: right;
  text-shadow: 2px 2px 4px #000;
}

.username p:hover {
  color: #EFEFEF;
}

.username p:hover+svg path {
  fill: #EFEFEF;
}

/* Shares / Playlists / Personal  */

.header-nav {
  cursor: pointer;
  display: flex;
  height: auto;
  justify-content: space-around;
  margin: 1em 0;
  order: 5;
  padding: 0 0.3em;
  width: 100%;
  transition: all 0.15s linear;
}

.header-nav p {
  color: lightgray;
  display: none;
  margin: 0 2em 0 0.5em;
  text-shadow: 2px 2px 4px #000;
  transition: all 0.15s linear;
}

.header-nav p:hover {
  color: #fff;
}

.header-nav svg {
  width: 10%;
  height: 10%;
}

.header-nav p:last-of-type {
  margin-right: 0;
}

/* MAGIC Logo */

.logo {
  align-items: center;
  color: #EFEFEF;
  display: flex;
  font-family: 'Roboto Slab', serif;
  font-weight: 400;
  font-size: 3em;
  justify-content: flex-start;
  margin: 0.3em auto 0.05em auto;
  order: 0;
  transition: all 0.15s linear;
}

.logo a {
  text-decoration: none;
  margin: 0;
  padding: 0;
}

.logo img {
  width: 4.6em;
  padding: 0;
}

/* Collectibles Section Header */

.collectibles {
  color: #4D4D4D;
  font-size: 2em;
  padding: 0.8em 0.5em;
  text-align: center;
}

/* Section of Profile Cards */

section {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  padding: 0 0 0.6em 0;
  transition: all .15s linear;
  width: 100%;
}

section .section-show-more {
  align-items: center;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  display: flex;
  filter: opacity(50%);
  flex-direction: row;
  padding: 1em;
  justify-content: center;
  fill: #2B2B2B;
  stroke: #2b2b2b;
  text-align: center;
  width: 95vw;
}

.section-show-more div {
  background-color: #EFEFEF;
  border: 1px solid #2b2b2b;
  border-radius: 50%;
  padding-top: 0.3em;
  height: 1.6em;
  width: 1.6em;
}

.section-show-more:hover {
  filter: opacity(100%);
}

/* Profile Card */

article {
  background-color: #fff;
  box-shadow: 0px 0px 8px #fff;
  flex: 1;
  height: auto;
  margin: 0.04em 0;
  min-width: 100%;
  position: relative;
  width: 100%;
}

/* Card Header / background container */

article header {
  display: flex;
  background-blend-mode: overlay;
  flex-flow: row wrap;
  justify-content: space-between;
  padding: 1em 1em 5em 1em;
  position: relative;
  width: 100%;
}

/* Card Header Share Button */

article .share-button {
  background-color: #fff;
  border-radius: 50%;
  color: #4D4D4D;
  cursor: pointer;
  width: 3em;
  height: 3em;
}

article .share-button:hover {
  background-color: lavender;
}

/* Card Header Views Count */

article aside {
  color: #EFEFEF;
}

aside h3 {
  color: inherit;
  font-size: 2em;
}

/* Card Main body */

main {
  background: #EFEFEF url(images/light-paper-fibers.png) 0 0 repeat;
  color: #4D4D4D;
  display: none;
  font-size: 0.8em;
  padding: 1.5em;
  height: auto;
  word-wrap: break-word;
}

/* Card Content Name */

h4 {
  font-size: 1.3em;
}

/* Card Content Date */

.date {
  color: #808080;
  margin: 0.4em 0;
}

/* Card Content Url */

.url {
  background: #ddd url(images/light-paper-fibers.png) 0 0 repeat;
  overflow-y: scroll;
  padding: 0.4em 2.3em 1em 0.6em;
  margin: 0.8em 0;
}

.url a {
  text-decoration: none;
}

.url a:visited {
  color: #4D4D4D;
  text-decoration: none;
}

/* Card Content Playlist */

.playlist {
  margin-bottom: 1em;
}

/* Card Content Attachments */

.attachments {
  color: #55B4F8;
  font-size: 2.5em;
  padding: 0 0 0.4em 0;
}

/* Card Footer Show More Button */

article .show-more {
  align-items: center;
  background-color: transparent;
  border: 0;
  color: white;
  cursor: pointer;
  display: flex;
  flex-direction: row;
  height: auto;
  justify-content: center;
  padding-top: 8em;
  position: absolute;
  text-align: center;
  top: 0;
  width: 100%;
  z-index: 1;
}

.show-more svg {
  stroke: white;
  margin: 0 0.3em;
}

.show-more hr {
  border-color: white;
}

article .show-more:hover {
  filter: opacity(100%);
}

.show-more:active+main {
  display: block;
}

/* Background URLs for Cards */

.profile-1 header {
  background: #666 url(https://nerdist.com/wp-content/uploads/2015/12/ZendikarArt_FEAT.png) no-repeat center top/100%;
}

.profile-2 header {
  background: #666 url(http://2.bp.blogspot.com/-iHnXQ8dOnEg/VT4HM0nvt3I/AAAAAAABY3Y/mbmAOXHzXh4/s1600/1%2B-%2BThe%2BForgemaster%2Bby%2BBrandon%2BMoore.jpg) no-repeat center top/100%;
}

.profile-3 header {
  background: #666 url(http://s3.gatheringmagic.com/uploads/2015/04/15/ML_3.jpg) no-repeat center top/100%;
}

.profile-4 header {
  background: #666 url(https://78.media.tumblr.com/8696531b07ec5b5fe8b58c3e4701cf4c/tumblr_ogrorv8MLU1sp8yqvo1_500.jpg) no-repeat center/100%;
}

.profile-5 header {
  background: #666 url(https://www.hipstersofthecoast.com/wp-content/uploads/2016/12/Rain-of-tears.jpg) no-repeat center top/100%;
}

.profile-6 header {
  background: #666 url(https://i.imgur.com/bIFnMZ3.jpg) no-repeat center/100%;
}

.profile-7 header {
  background: #666 url(https://nerdist.com/wp-content/uploads/2015/12/ZendikarArt_FEAT.png) no-repeat center/100%;
}

.profile-8 header {
  background: #666 url(https://nerdist.com/wp-content/uploads/2015/12/ZendikarArt_FEAT.png) no-repeat center/100%;
}

.profile-9 header {
  background: #666 url(https://nerdist.com/wp-content/uploads/2015/12/ZendikarArt_FEAT.png) no-repeat center/100%;
}

.profile-10 header {
  background: #666 url(https://nerdist.com/wp-content/uploads/2015/12/ZendikarArt_FEAT.png) no-repeat center/100%;
}

.profile-11 header {
  background: #666 url(https://nerdist.com/wp-content/uploads/2015/12/ZendikarArt_FEAT.png) no-repeat center/100%;
}

.profile-12 header {
  background: #666 url(https://nerdist.com/wp-content/uploads/2015/12/ZendikarArt_FEAT.png) no-repeat center/100%;
}

article:hover header {
  background-color: #888;
}

/* Hide For < 1805px */

.profile-11,
.profile-12 {
  display: none;
}

/* Hide For < 1502px */

.profile-9,
.profile-10 {
  display: none;
}

/* Hide For < 1216px */

.profile-8,
.profile-7 {
  display: none;
}

/* Hide For < 918px */

.profile-8,
.profile-7,
.profile-6,
.profile-5 {
  display: none;
}

/* Hide For < 685px */

.profile-8,
.profile-7,
.profile-6,
.profile-5 {
  display: none;
}

@media only screen and (min-width: 450px) {
  article {
    box-shadow: 0px 2px 8px #888888;
    cursor: initial;
    flex: 1;
    margin: 0.5em 0.4em;
    max-width: 25em;
    min-width: 18em;
    width: 18em;
  }
  main {
    display: block;
  }
  article .show-more {
    display: none;
  }
  .header-nav {
    justify-content: center;
  }
  .header-nav svg {
    width: auto;
    height: auto;
  }
  .header-nav p {
    display: block;
  }
  section {
    padding: 0 0.8em 0.6em 0.8em;
  }
  .profile-4,
  .profile-3 {
    display: none;
  }
}

@media only screen and (min-width: 602px) {
  .profile-4,
  .profile-3 {
    display: block;
  }
}

@media only screen and (min-width: 685px) {
  .page-header {
    align-items: flex-end;
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    height: auto;
    width: 100vw;
  }
  .username {
    align-items: center;
    cursor: pointer;
    display: flex;
    justify-content: flex-end;
    padding: 0.8em 1.5em 1.8em 0;
    width: 100%;
  }
  .header-nav {
    height: 1em;
    justify-content: left;
    margin: 0 0 2em 1.5em;
    order: 0;
    padding: 0;
    width: 60%;
  }
  .logo {
    align-items: center;
    color: #EFEFEF;
    display: flex;
    font-family: 'Roboto Slab', serif;
    font-weight: 400;
    font-size: 3em;
    margin: 0;
    padding: 0 0.5em 0.45em 0;
  }
  .collectibles {
    text-align: left;
  }
}

@media only screen and (min-width: 891px) {
  .header-nav p {
    margin: 0 5em 0 1em;
  }
  .profile-6,
  .profile-5 {
    display: block;
  }
}

@media only screen and (min-width: 1191px) {
  .profile-8,
  .profile-7 {
    display: block;
  }
}

@media only screen and (min-width: 1502px) {
  .profile-9,
  .profile-10 {
    display: block;
  }
}

@media only screen and (min-width: 1805px) {
  .profile-11,
  .profile-12 {
    display: block;
  }
}

